tests/error/inout_errors/moved.err
Error: Not owned (at $FILE:21:8)
   | 
19 | def test(q: qubit) -> None:
20 |     foo(q)
21 |     use(q)
   |         ^ Function `use` wants to take ownership of this argument,
   |           but `test` doesn't own `q`
   | 
19 | def test(q: qubit) -> None:
   |          -------- Argument `q` is only borrowed. Consider taking ownership:
   |                   `q: qubit @owned`

Guppy compilation failed due to 1 previous error
